# origin

./: .gitignore
Homework 3_1/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj  in.txt  out.txt
Homework 3_10/my_first_cmake_project/: CMakeLists.txt  source.cpp
Homework 3_11/CientApplication/: CientApplication.cpp  CientApplication.sln  CientApplication.vcxproj  CientApplication.vcxproj.filters
Homework 3_11/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj  Task1.vcxproj.filters
Homework 3_11/Task1_Cmake/: CMakeLists.txt  Greeter.cpp  Greeter.h
Homework 3_11/Task2/: Leaver.cpp  Leaver.h  Task2.sln  Task2.vcxproj
Homework 3_11/my_lib/: Greeter.cpp  Greeter.h  my_lib.sln  my_lib.vcxproj
Homework 3_2/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj
Homework 3_2/Task 2/: Task 2.cpp  Task 2.sln  Task 2.vcxproj
Homework 3_2/Task 3/: MyTemplate.cpp  Task 3.sln  Task 3.vcxproj
Homework 3_3/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj
Homework 3_3/Task 2/: MyTemplate.cpp  Task 2.sln  Task 2.vcxproj  Task 2.vcxproj.filters
Homework 3_4/Task 1/: Task 1.cpp  Task 1.sln  Task 1.vcxproj
Homework 3_6/Task 1/: Header.h  (+5 more)
Homework 3_6/Task 3/: CMakeLists.txt  Equilateral.cpp  Equilateral.h  Figures.cpp  Figures.h  Isosceles.cpp  Isosceles.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Right_triangle.cpp  Right_triangle.h  Square.cpp  Square.h  Task 3.cpp  Task 3.sln  Task 3.vcxproj  Task 3.vcxproj.filters  Triangle.cpp  Triangle.h  print_info.cpp  print_info.h  wrong_figure.cpp  wrong_figure.h
(+33 files in other folders)
